// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`caseStudyMetadata > composes title + canonical from slug 1`] = `
{
  "alternates": {
    "canonical": "/work/codeflow",
  },
  "description": "AI builder.",
  "openGraph": {
    "description": "AI builder.",
    "images": [
      "/api/og?title=CodeFlow&subtitle=AI+builder.&eyebrow=case+study",
    ],
    "title": "CodeFlow · case study",
  },
  "title": "CodeFlow · case study",
  "twitter": {
    "card": "summary_large_image",
    "description": "AI builder.",
    "images": [
      "/api/og?title=CodeFlow&subtitle=AI+builder.&eyebrow=case+study",
    ],
    "title": "CodeFlow · case study",
  },
}
`;

exports[`pageMetadata > builds metadata for "about" 1`] = `
{
  "alternates": {
    "canonical": "/about",
  },
  "description": "Vaibhav Verma — SWE · 2026 B.Tech CSE grad in Noida. The long version of the one-line bio.",
  "openGraph": {
    "description": "Vaibhav Verma — SWE · 2026 B.Tech CSE grad in Noida. The long version of the one-line bio.",
    "images": [
      "/api/og?title=about&subtitle=Vaibhav+Verma+%E2%80%94+SWE+%C2%B7+2026+B.Tech+CSE+grad+in+Noida.+The+long+version+of+the+one-line+bio.",
    ],
    "title": "about — Vaibhav Verma",
  },
  "title": "about — Vaibhav Verma",
  "twitter": {
    "card": "summary_large_image",
    "description": "Vaibhav Verma — SWE · 2026 B.Tech CSE grad in Noida. The long version of the one-line bio.",
    "images": [
      "/api/og?title=about&subtitle=Vaibhav+Verma+%E2%80%94+SWE+%C2%B7+2026+B.Tech+CSE+grad+in+Noida.+The+long+version+of+the+one-line+bio.",
    ],
    "title": "about — Vaibhav Verma",
  },
}
`;

exports[`pageMetadata > builds metadata for "contact" 1`] = `
{
  "alternates": {
    "canonical": "/contact",
  },
  "description": "The fastest ways to reach Vaibhav Verma — email and socials.",
  "openGraph": {
    "description": "The fastest ways to reach Vaibhav Verma — email and socials.",
    "images": [
      "/api/og?title=contact&subtitle=The+fastest+ways+to+reach+Vaibhav+Verma+%E2%80%94+email+and+socials.",
    ],
    "title": "contact — Vaibhav Verma",
  },
  "title": "contact — Vaibhav Verma",
  "twitter": {
    "card": "summary_large_image",
    "description": "The fastest ways to reach Vaibhav Verma — email and socials.",
    "images": [
      "/api/og?title=contact&subtitle=The+fastest+ways+to+reach+Vaibhav+Verma+%E2%80%94+email+and+socials.",
    ],
    "title": "contact — Vaibhav Verma",
  },
}
`;

exports[`pageMetadata > builds metadata for "experiments" 1`] = `
{
  "alternates": {
    "canonical": "/experiments",
  },
  "description": "Lab notebook. Fuckups and discoveries.",
  "openGraph": {
    "description": "Lab notebook. Fuckups and discoveries.",
    "images": [
      "/api/og?title=Experiments&subtitle=Lab+notebook.+Fuckups+and+discoveries.",
    ],
    "title": "Experiments — Vaibhav Verma",
  },
  "title": "Experiments — Vaibhav Verma",
  "twitter": {
    "card": "summary_large_image",
    "description": "Lab notebook. Fuckups and discoveries.",
    "images": [
      "/api/og?title=Experiments&subtitle=Lab+notebook.+Fuckups+and+discoveries.",
    ],
    "title": "Experiments — Vaibhav Verma",
  },
}
`;

exports[`pageMetadata > builds metadata for "home" 1`] = `
{
  "alternates": {
    "canonical": "/",
    "types": {
      "application/rss+xml": "/rss.xml",
    },
  },
}
`;

exports[`pageMetadata > builds metadata for "now" 1`] = `
{
  "alternates": {
    "canonical": "/now",
  },
  "description": "What I'm working on, learning, and reading right now.",
  "openGraph": {
    "description": "What I'm working on, learning, and reading right now.",
    "images": [
      "/api/og?title=now&subtitle=What+I%27m+working+on%2C+learning%2C+and+reading+right+now.",
    ],
    "title": "now — Vaibhav Verma",
  },
  "title": "now — Vaibhav Verma",
  "twitter": {
    "card": "summary_large_image",
    "description": "What I'm working on, learning, and reading right now.",
    "images": [
      "/api/og?title=now&subtitle=What+I%27m+working+on%2C+learning%2C+and+reading+right+now.",
    ],
    "title": "now — Vaibhav Verma",
  },
}
`;

exports[`pageMetadata > builds metadata for "terminal" 1`] = `
{
  "alternates": {
    "canonical": "/terminal",
  },
  "description": "A real shell in your browser. Try \`help\`.",
  "openGraph": {
    "description": "A real shell in your browser. Try \`help\`.",
    "images": [
      "/api/og?title=terminal&subtitle=A+real+shell+in+your+browser.+Try+%60help%60.",
    ],
    "title": "terminal — Vaibhav Verma",
  },
  "title": "terminal — Vaibhav Verma",
  "twitter": {
    "card": "summary_large_image",
    "description": "A real shell in your browser. Try \`help\`.",
    "images": [
      "/api/og?title=terminal&subtitle=A+real+shell+in+your+browser.+Try+%60help%60.",
    ],
    "title": "terminal — Vaibhav Verma",
  },
}
`;

exports[`pageMetadata > builds metadata for "uses" 1`] = `
{
  "alternates": {
    "canonical": "/uses",
  },
  "description": "The hardware, editor, and software I actually reach for.",
  "openGraph": {
    "description": "The hardware, editor, and software I actually reach for.",
    "images": [
      "/api/og?title=uses&subtitle=The+hardware%2C+editor%2C+and+software+I+actually+reach+for.",
    ],
    "title": "uses — Vaibhav Verma",
  },
  "title": "uses — Vaibhav Verma",
  "twitter": {
    "card": "summary_large_image",
    "description": "The hardware, editor, and software I actually reach for.",
    "images": [
      "/api/og?title=uses&subtitle=The+hardware%2C+editor%2C+and+software+I+actually+reach+for.",
    ],
    "title": "uses — Vaibhav Verma",
  },
}
`;

exports[`pageMetadata > builds metadata for "work" 1`] = `
{
  "alternates": {
    "canonical": "/work",
  },
  "description": "Full build log of every project I've shipped.",
  "openGraph": {
    "description": "Full build log of every project I've shipped.",
    "images": [
      "/api/og?title=All+projects&subtitle=Full+build+log+of+every+project+I%27ve+shipped.",
    ],
    "title": "All projects — Vaibhav Verma",
  },
  "title": "All projects — Vaibhav Verma",
  "twitter": {
    "card": "summary_large_image",
    "description": "Full build log of every project I've shipped.",
    "images": [
      "/api/og?title=All+projects&subtitle=Full+build+log+of+every+project+I%27ve+shipped.",
    ],
    "title": "All projects — Vaibhav Verma",
  },
}
`;

exports[`pageMetadata > builds metadata for "writing" 1`] = `
{
  "alternates": {
    "canonical": "/writing",
    "types": {
      "application/rss+xml": "/rss.xml",
    },
  },
  "description": "Notes, essays, build logs.",
  "openGraph": {
    "description": "Notes, essays, build logs.",
    "images": [
      "/api/og?title=Writing&subtitle=Notes%2C+essays%2C+build+logs.",
    ],
    "title": "Writing — Vaibhav Verma",
  },
  "title": "Writing — Vaibhav Verma",
  "twitter": {
    "card": "summary_large_image",
    "description": "Notes, essays, build logs.",
    "images": [
      "/api/og?title=Writing&subtitle=Notes%2C+essays%2C+build+logs.",
    ],
    "title": "Writing — Vaibhav Verma",
  },
}
`;

exports[`postMetadata > builds title/description/canonical/og from a post 1`] = `
{
  "alternates": {
    "canonical": "/writing/hello-world",
  },
  "description": "A meta description.",
  "openGraph": {
    "authors": [
      "Vaibhav Verma",
    ],
    "description": "A meta description.",
    "images": [
      {
        "url": "/api/bloggz-media/hero.png",
      },
    ],
    "modifiedTime": "2026-06-02T00:00:00.000Z",
    "publishedTime": "2026-06-01T00:00:00.000Z",
    "title": "Meta Title",
    "type": "article",
  },
  "title": "Meta Title",
  "twitter": {
    "card": "summary_large_image",
    "description": "A meta description.",
    "images": [
      "/api/bloggz-media/hero.png",
    ],
    "title": "Meta Title",
  },
}
`;
